[chg] cms with django <= 1.11 support

--- a/cms/templates/cms/list_pages.html
+++ b/cms/templates/cms/list_pages.html
@@ -1,1 +1,7 @@
+{% extends "base.html" %}
+
+{% block title %}Páginas{% endblock %}
+
+{% block content %}
 {% include "cms/_list_pages.html" %}
+{% endblock %}
