--- a/cms/templates/cms/page.html
+++ b/cms/templates/cms/page.html
@@ -1,6 +1,12 @@
+{% extends "base.html" %}
+
+{% block title %}{{ page.title }}{% endblock %}
+
+{% block content %}
 <h1> {{ page.title }}</h1>
 <p>
     {% autoescape off %}
     {{ page.content }}
     {% endautoescape %}
 </p>
+{% endblock %}
